--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ p {
   height: 100px;
   margin: auto;
   padding: 0 2rem;
+ width:100%
 }
 
 .navbar a {
@@ -105,6 +106,7 @@ p {
   max-width: 1100px;
   margin: auto;
   padding: 0 2rem;
+ width:100%
 }
 
 #home .home-header {
