--- a/src/index.css
+++ b/src/index.css
@@ -1,522 +1,727 @@
- 
- /* === Google Font === */
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  /* === Google Font === */
+{
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
+margin:0;
 
-/* === Global Reset === */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+padding:0;
+
+box-dizing:border-box;
+
 }
 
-/* === Root Variables === */
-:root {
-  --dark-blue: #252B42;
-  --sky-blue: #23A6F0;
-  --light-sky-blue: #b2e3ff;
-  --light-orange: #E77C40;
-  --red: #E74040;
-  --light-pink: #FFDCD1;
-  --light-gray: #737373;
-  --yellow: #F3CD03;
-  --green: #2DC071;
-  --light-green: #B9EAA8;
+:root{
+
+--dark-blue:#252B42;
+
+--sky-blue:#23A6F0;
+
+--light-sky-blue:#b2e3ff;
+
+--light-orange:#E77C40;
+
+--red:#E74040;
+
+--light-pink:#FFDCD1;
+
+--light-gray:#737373;
+
+--yellow:#F3CD03;
+
+--green:#2DC071;
+
+--light-green:#B9EAA8;
+
 }
 
-/* === Base Styles === */
-body {
-  font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+body{
+
+font-family: "Montserrat", sans-serif;
+
+font-size:16px;
+
 }
 
-ul {
-  list-style: none;
+ul{
+
+list-style: none;
+
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
+a{
+
+text-decoration: none;
+
 }
 
-p {
-  line-height: 1.4;
+p{
+
+line-height: 1.4;
+
 }
 
-/* === Header & Navbar === */
-#header {
-  background-color: var(--dark-blue);
+#header{
+
+background-color: var(--dark-blue);
+
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1100px;
-  height: 100px;
-  margin: auto;
-  padding: 0 2rem;
- width:100%
+.navbar{
+
+display:flex;
+
+justify-content: space-between;
+
+align-items: center;
+
+max-width: 1100px;
+
+height:100px;
+
+margin: auto;
+
+padding: 0 2rem;
+
 }
 
-.navbar a {
-  color: #fff;
-  font-size: 14px;
+.navbar a{
+
+color:#fff;
+
+font-size: 14px;
+
 }
 
-.navbar .logo {
-  font-size: 24px;
-  font-weight: 600;
+.navbar .logo{
+
+font-size: 24px;
+
+font-weight: 600;
+
 }
 
-.navbar ul {
-  display: flex;
-  gap: 10px;
+.navbar ul{
+
+display:flex;
+
 }
 
 .navbar ul li a {
-  font-weight: 500;
-  transition: color 0.3s ease;
+
+margin:0 10px;
+
+font-weight: 500;
+
+transition: all 0.3s ease;
+
 }
 
-.navbar ul li a:hover {
-  color: var(--red);
+.navbar ul li a:hover{
+
+color:var(--red);
+
 }
 
-.navbar .account .btn-join {
-  background-color: var(--sky-blue);
-  padding: 10px 20px;
-  margin-left: 25px;
-  border-radius: 5px;
-  text-transform: uppercase;
-  color: #fff;
+.navbar .account .btn-join{
+
+background-color: var(--sky-blue);
+
+padding:10px 20px;
+
+margin-left: 25px;
+
+border-radius: 5px;
+
+text-transform: uppercase;
+
 }
 
-.navbar .account .btn-join svg {
-  font-size: 12px;
-  margin-left: 5px;
-  vertical-align: middle;
+.navbar .account .btn-join svg{
+
+font-size:12px;
+
+margin-left:5px;
+
+vertical-align: middle;
+
 }
 
-/* === Home Section === */
-#home {
-  background-color: var(--dark-blue);
-  padding: 5rem 0;
+#home{
+
+background-color: var(--dark-blue);
+
+padding:5rem 0;
+
 }
 
-.container {
-  max-width: 1100px;
-  margin: auto;
-  padding: 0 2rem;
- width:100%
+.container{
+
+max-width: 1100px;
+
+margin:auto;
+
+padding:0 2rem;
+
 }
 
-#home .home-header {
-  text-align: center;
-  color: white;
-  max-width: 450px;
-  margin: auto;
+#home .home-header{
+
+text-align: center;
+
+color:white;
+
+max-width: 450px;
+
+margin: auto;
+
 }
 
-#home .home-header span {
-  color: var(--red);
-  font-weight: 600;
+#home .home-header span{
+
+color:var(--red);
+
+font-weight: 600;
+
 }
 
-#home .home-header h1 {
-  font-size: 40px;
-  font-weight: 600;
-  margin: 20px 0;
-  color: var(--light-pink);
+#home .home-header h1{
+
+font-size: 40px;
+
+font-weight: 600;
+
+margin:20px 0;
+
+color:var(--light-pink);
+
 }
 
-#home .home-header p {
-  margin-bottom: 30px;
-  color: var(--light-pink);
-  line-height: 1.6;
+#home .home-header p{
+
+margin-bottom:30px;
+
+color:var(--light-pink);
+
+line-height: 1.6;
+
 }
 
-#home .home-header .btn {
-  padding: 10px 30px;
-  border-radius: 5px;
-  font-size: 12px;
-  font-weight: 500;
-  border: 1px solid var(--red);
-  margin: 0 5px;
-  cursor: pointer;
+#home .home-header .btn{
+
+padding:10px 30px;
+
+border-radius:5px;
+
+font-size:12px;
+
+font-weight: 500;
+
+border:1px solid var(--red);
+
+margin:0 5px;
+
 }
 
-#home .home-header .btn.btn-red {
-  color: white;
-  background-color: var(--red);
+#home .home-header .btn.btn-red{
+
+color:white;
+
+background-color: var(--red);
+
 }
 
-#home .home-header .btn.btn-transparent {
-  color: var(--red);
-  background: transparent;
+#home .home-header .btn.btn-transparent{
+
+color:var(--red);
+
 }
 
-/* === Cards === */
-#home .card-container {
-  margin: 5rem auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+#home .card-container{
+
+margin:5rem ;
+
+display:grid;
+
+grid-template-columns: repeat(3, 1fr);
+
+gap:20px;
+
 }
 
-#home .card-container .card {
-  padding: 25px;
-  background-color: white;
-  border-radius: 5px;
-  text-align: left;
+#home .card-container .card{
+
+padding:25px;
+
+background-color: white;
+
+border-radius: 5px;
+
 }
 
-#home .card-container .card .icon {
-  display: inline-block;
-  padding: 12px;
-  border-radius: 10px;
+#home .card-container .card .icon{
+
+display: inline-block;
+
+padding:12px;
+
+border-radius: 10px;
+
 }
 
-#home .card-container .card h2 {
-  font-size: 18px;
-  color: var(--dark-blue);
-  margin-top: 15px;
+#home .card-container .card .icon svg{
+
+font-size: 25px;
+
 }
 
-#home .card-container .card .line {
-  width: 50px;
-  height: 2px;
-  background-color: var(--red);
-  margin: 15px 0;
+#home .card-container .card h2{
+
+font-size: 18px;
+
+color:var(--dark-blue);
+
+margin-top:15px;
+
 }
 
-#home .card-container .card p {
-  font-size: 14px;
-  color: var(--light-gray);
+#home .card-container .card .line{
+
+width: 50px;
+
+height: 2px;
+
+display: block;
+
+background-color: var(--red);
+
+margin: 15px 0;
+
 }
 
-/* === Courses === */
-#courses {
-  padding: 7rem 0;
+#home .card-container .card p{
+
+font-size: 14px;
+
 }
 
-.section-header h2 {
-  font-size: 35px;
-  margin: 15px 0;
-  color: var(--dark-blue);
+.text-primary{
+
+color:var(--sky-blue);
+
+font-weight: 600;
+
+font-size: 14px;
+
 }
 
-.section-header p {
-  color: var(--light-gray);
+#courses{
+
+padding:7rem 0;
+
 }
 
-#courses .courses-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 3rem;
-  margin-top: 4rem;
+.section-header h2{
+
+font-size: 35px;
+
+margin:15px 0;
+
+color:var(--dark-blue);
+
+}
+
+.section-header p{
+
+color:var(--light-gray);
+
+}
+
+.text-secondary{
+
+color:var(--green);
+
+font-weight: 600;
+
+font-size: 14px;
+
+}
+
+#courses .courses-container{
+
+display:grid;
+
+grid-template-columns: repeat(3, 1fr);
+
+gap:3rem;
+
+margin-top:4rem;
+
+}
+
+#courses .courses-container .course img{
+
+width:100%;
+
 }
 
 #courses .courses-container .course {
-  position: relative;
-  background: #fff;
-  border-radius: 5px;
-  overflow: hidden;
+
+position: relative;
+
 }
 
-#courses .courses-container .course img {
-  width: 100%;
-  display: block;
+#courses .courses-container .course .sale{
+
+top:10px;
+
+left:10px;
+
+position: absolute;
+
+padding: 5px 8px;
+
+background-color: var(--red);
+
+color:white;
+
+font-weight: 500;
+
+font-size: 12px;
+
+border-radius: 5px;
+
 }
 
-#courses .courses-container .course .sale {
-  top: 10px;
-  left: 10px;
-  position: absolute;
-  padding: 5px 8px;
-  background-color: var(--red);
-  color: white;
-  font-weight: 500;
-  font-size: 12px;
-  border-radius: 5px;
+#courses .courses-container .course .content .course-field{
+
+display:flex;
+
+justify-content: space-between;
+
+align-items: center;
+
 }
 
 #courses .courses-container .course .content {
-  padding: 15px;
-  font-size: 14px;
-  color: var(--light-gray);
+
+padding: 15px;
+
+font-size:14px;
+
+color:var(--light-gray);
+
 }
 
-#courses .courses-container .course .content h3 {
-  margin: 10px 0;
-  color: var(--dark-blue);
+#courses .courses-container .course .content .course-field .department{
+
+color:var(--sky-blue);
+
+font-weight: 600;
+
 }
 
-#courses .courses-container .course .content .btn-learn {
-  display: inline-block;
-  padding: 12px 20px;
-  border: 1px solid var(--sky-blue);
-  color: var(--sky-blue);
-  border-radius: 25px;
-  font-weight: 500;
-  transition: 0.3s;
+#courses .courses-container .course .content .course-field .rating{
+
+background-color: var(--dark-blue);
+
+color: white;
+
+padding: 5px 10px;
+
+border-radius: 20px;
+
 }
 
-#courses .courses-container .course .content .btn-learn:hover {
-  background-color: var(--sky-blue);
-  color: #fff;
+#courses .courses-container .course .content .course-field .rating svg{
+
+color: var(--yellow);
+
 }
 
-/* === Reviews === */
-#reviews {
-  padding-bottom: 7rem;
+#courses .courses-container .course .content h3{
+
+margin: 10px 0;
+
+color: var(--dark-blue);
+
 }
 
-#reviews .ratings {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
-  margin-top: 5rem;
+#courses .courses-container .course .content .sales{
+
+margin: 10px 0;
+
+font-weight: 600;
+
 }
 
-#reviews .ratings .rating {
-  text-align: center;
-  background: #fff;
-  padding: 2rem;
-  border-radius: 10px;
+#courses .courses-container .course .content .price del{
+
+margin-right: 10px;
+
+font-weight: 600;
+
 }
 
-#reviews .ratings .rating img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  object-fit: cover;
+#courses .courses-container .course .content .course-info{
+
+display: flex;
+
+align-items: center;
+
+margin: 15px 0;
+
 }
 
-#reviews .ratings .rating .stars {
-  color: var(--yellow);
-  font-size: 30px;
-  margin-top: 10px;
+#courses .courses-container .course .content .course-info p{
+
+margin-right: 10px;
+
 }
 
-#reviews .ratings .rating .description {
-  margin-top: 10px;
-  font-size: 14px;
-  color: var(--light-gray);
+#courses .courses-container .course .content .course-info p svg{
+
+color: var(--sky-blue);
+
+font-size: 20px;
+
+vertical-align: middle;
+
+margin-right: 3px;
+
 }
 
-/* === Join Us === */
-#join-us {
-  background-color: var(--dark-blue);
-  padding: 6rem 0;
-  text-align: center;
-  color: white;
+#courses .courses-container .course .content .btn-learn{
+
+display: inline-block;
+
+padding: 12px 20px;
+
+border: 1px solid var(--sky-blue);
+
+color: var(--sky-blue);
+
+border-radius: 25px;
+
+font-weight: 500;
+
 }
 
-#join-us .content {
-  max-width: 600px;
-  margin: auto;
+#courses .courses-container .course .content .btn-learn svg{
+
+vertical-align: middle;
+
 }
 
-#join-us .content form {
-  margin-top: 4rem;
-  position: relative;
+#reviews{
+
+padding-bottom: 7rem;
+
 }
 
-#join-us .content form input {
-  padding: 12px;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
-  width: 100%;
+#reviews .ratings{
+
+display: grid;
+
+grid-template-columns: repeat(3, 1fr);
+
+gap:12rem;
+
+margin-top: 5rem;
+
 }
 
-#join-us .content form button {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 20px;
-  background-color: var(--sky-blue);
-  color: white;
-  border: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
+#reviews .ratings .rating img{
+
+width: 50px;
+
+border-radius: 50%;
+
+height: 50px;
+
+object-fit: cover;
+
+margin-right: 10px;
+
 }
 
-/* === Footer === */
-#footer .footer-row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 2rem;
-  padding: 3rem 0;
+#reviews .ratings .rating .stars{
+
+color: var(--yellow);
+
+text-align: center;
+
+font-size: 30px;
+
+display: block;
+
 }
 
-#footer h2 {
-  margin-bottom: 20px;
-  color: var(--dark-blue);
+#reviews .ratings .rating .description{
+
+text-align: center;
+
+margin-top: 10px;
+
+font-size: 14px;
+
+color: var(--light-gray);
+
 }
 
-#footer p,
-#footer a {
-  color: var(--light-gray);
-  font-weight: 500;
+#reviews .ratings .rating .person{
+
+display: flex;
+
+align-items: center;
+
+margin-top: 30px;
+
+font-weight: 500px;
+
 }
 
-#footer .social {
-  margin-top: 20px;
+#reviews .ratings .rating .person .person-info p{
+
+margin-top:2px;
+
 }
 
-#footer .social a {
-  color: var(--sky-blue);
-  margin-right: 10px;
-  font-size: 20px;
+#join-us
+
+{
+
+background-color: var(--dark-blue);
+
+padding: 6rem 0;
+
 }
 
-/* === Media Queries === */
+#join-us .content{
 
-/* Tablet */
-@media (max-width: 992px) {
-  .navbar {
-    padding: 1rem;
-  }
+max-width: 600px;
 
-  #home .home-header h1 {
-    font-size: 32px;
-  }
+margin: auto;
+
+text-align: center;
+
+color: white;
+
 }
 
-/* Mobile */
-@media (max-width: 600px) {
-  .navbar {
-    flex-direction: column;
-    height: auto;
-    padding: 1rem;
-    text-align: center;
-  }
+#join-us .content h2{
 
-  .navbar ul {
-    display: none; /* hide nav links for now */
-  }
+font-size: 35px;
 
-  #home .home-header h1 {
-    font-size: 26px;
-  }
+margin: 15px 0;
 
-  #join-us .content h2 {
-    font-size: 28px;
-  }
-
-  #footer .footer-row {
-    grid-template-columns: 1fr;
-  }
-}
-/* === Final Mobile Fixes === */
-@media (max-width: 768px) {
-  html, body {
-    overflow-x: hidden;
-  }
-
-  .container {
-    padding: 0 1rem;
-    width: 100%;
-  }
-
-  .card-container {
-    grid-template-columns: 1fr;
-    gap: 1.5rem;
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #home .home-header h1 {
-    font-size: 1.8rem;
-  }
-
-  #home .home-header p {
-    font-size: 0.9rem;
-  }
-
-  #home .home-header .btn {
-    padding: 8px 16px;
-    font-size: 0.9rem;
-  }
-}
-/* === FINAL MOBILE FIXES === */
-html, body {
-  width: 100%;
-  overflow-x: hidden;
 }
 
-/* Tablets and below */
-@media (max-width: 992px) {
-  .navbar {
-    flex-direction: column;
-    text-align: center;
-    height: auto;
-  }
+#join-us .content form{
 
-  .navbar ul {
-    flex-direction: column;
-    align-items: center;
-  }
+margin-top: 4rem;
 
-  #home .home-header h1 {
-    font-size: 32px;
-  }
+position: relative;
 
-  .container {
-    padding: 0 1.5rem;
-  }
 }
 
-/* Phones and small screens */
-@media (max-width: 600px) {
-  .container {
-    width: 100%;
-    padding: 0 1rem;
-  }
+#join-us .content form input{
 
-  .card-container {
-    grid-template-columns: 1fr;
-    gap: 1.5rem;
-  }
+padding: 12px;
 
-  #home .home-header {
-    text-align: center;
-    padding: 1rem;
-  }
+border: none;
 
-  #home .home-header h1 {
-    font-size: 1.8rem;
-    line-height: 1.3;
-  }
+border-radius: 5px;
 
-  #home .home-header p {
-    font-size: 0.9rem;
-  }
+font-size: 12px;
 
-  #home .home-header .btn {
-    display: block;
-    margin: 10px auto;
-    width: fit-content;
-  }
+width: 100%;
 
-  .navbar ul {
-    display: none; /* optional mobile menu placeholder */
-  }
+}
 
-  #footer .footer-row {
-    grid-template-columns: 1fr;
-  }
- 
+#join-us .content form button{
 
- 
+position: absolute;
 
- 
+right: 0;
+
+top: 0;
+
+padding: 12px 20px;
+
+background-color: var(--sky-blue);
+
+color: white;
+
+border: none;
+
+border-top-right-radius: 5px;
+
+border-bottom-right-radius: 5px;
+
+}
+
+.join-form{
+
+display: flex;
+
+justify-content: center;
+
+align-items: center;
+
+}
+
+#footer .container .footer-row {
+
+display: grid;
+
+grid-template-columns: repeat(4, 1fr);
+
+gap: 3rem;
+
+}
+
+#footer .container .footer-row h2{
+
+margin-bottom: 20px;
+
+color: var(--dark-blue);
+
+}
+
+#footer .container .footer-row p{
+
+color: var(--light-gray);
+
+}
+
+#footer .container .footer-row .social{
+
+margin-top: 20px;
+
+}
+
+#footer .container .footer-row .social a{
+
+color: var(--sky-blue);
+
+margin-right: 10px;
+
+font-size: 20px;
+
+}
+
+#footer .container .footer-row ul li{
+
+margin: 10px 0;
+
+color: var(--light-gray);
+
+font-weight: 500;
+
+}
+
+#footer .container .footer-row ul li a{
+
+color: var(--light-gray);
+
 }
